--- a/awards.html
+++ b/awards.html
@@ -9,7 +9,7 @@
         content="Awards and recognitions received by Apex Landbase for excellence in real estate advisory.">
 
     <!-- SAME SITE CSS -->
-    <link rel="stylesheet" href="/editing/CSS/style.css">
+    <link rel="stylesheet" href="editing/CSS/style.css">
 </head>
 
 <body class="awards-page">
@@ -18,13 +18,13 @@
     <p>Call Now Best Real Estate Consultation: <a href="tel:+919999074263">+91 9999074263</a></p>
 
     <div class="social-icons">
-      <a href="https://www.facebook.com/ApexLandbase" target="_blank"><img src="/img/fb.png" loading="lazy"
+      <a href="https://www.facebook.com/ApexLandbase" target="_blank"><img src="img/fb.png" loading="lazy"
           alt="facebook" /></a>
-      <a href="https://www.instagram.com/apexlandbase" target="_blank"><img src="/img/insta.png" loading="lazy"
+      <a href="https://www.instagram.com/apexlandbase" target="_blank"><img src="img/insta.png" loading="lazy"
           alt="instagram" /></a>
-      <a href="https://www.youtube.com/@apexlandbase" target="_blank"><img src="/img/youtube.png" loading="lazy"
+      <a href="https://www.youtube.com/@apexlandbase" target="_blank"><img src="img/youtube.png" loading="lazy"
           alt="youtube" /></a>
-      <a href="https://www.twitter.com/ApexLandbase" target="_blank"><img src="/img/twitter.png" loading="lazy"
+      <a href="https://www.twitter.com/ApexLandbase" target="_blank"><img src="img/twitter.png" loading="lazy"
           alt="twitter Apex Landbase" /></a>
     </div>
   </header>
@@ -34,7 +34,7 @@
     <div class="nav-container">
       <!-- LEFT: Logo -->
       <a href="index.html" class="logo" aria-label="Apex Landbase Home">
-        <img src="/img/image.png" alt="Apex Landbase logo" fetchpriority="high">
+        <img src="img/image.png" alt="Apex Landbase logo" fetchpriority="high">
         <span class="brand">APEX LANDBASE</span>
       </a>
       <!-- MENUE BUTTON-->
@@ -77,63 +77,63 @@
 
             <!-- AWARD 1 -->
             <div class="award-card">
-                <img src="/awards img/awads1.webp" alt="Trehan Group Certificate of Appreciation">
+                <img src="awards img/awads1.webp" alt="Trehan Group Certificate of Appreciation">
                 <h3>Certificate of Appreciation</h3>
                 <p>Trehan Group</p>
             </div>
 
             <!-- AWARD 2 -->
             <div class="award-card">
-                <img src="/awards img/awards2.webp" alt="Max Estates Channel Partner Certificate">
+                <img src="awards img/awards2.webp" alt="Max Estates Channel Partner Certificate">
                 <h3>Channel Partner Recognition</h3>
                 <p>Max Estates</p>
             </div>
 
             <!-- AWARD 3 -->
             <div class="award-card">
-                <img src="/awards img/awards3.webp" alt="Puri Diplomatic Residences Certificate">
+                <img src="awards img/awards3.webp" alt="Puri Diplomatic Residences Certificate">
                 <h3>Certificate of Excellence</h3>
                 <p>Puri Constructions</p>
             </div>
 
             <!-- AWARD 4 -->
             <div class="award-card">
-                <img src="/awards img/awards4.webp" alt="M3M Certificate of Achievement">
+                <img src="awards img/awards4.webp" alt="M3M Certificate of Achievement">
                 <h3>Sales Achievement Award</h3>
                 <p>M3M India</p>
             </div>
 
             <!-- AWARD 5 -->
             <div class="award-card">
-                <img src="/awards img/awards5.webp" alt="Bhumika Realty Letter of Prosperity">
+                <img src="awards img/awards5.webp" alt="Bhumika Realty Letter of Prosperity">
                 <h3>Letter of Prosperity & Abundance</h3>
                 <p>Bhumika Realty</p>
             </div>
 
             <!-- AWARD 6 -->
             <div class="award-card">
-                <img src="/awards img/awards6.webp" alt="Birla Estates Certificate">
+                <img src="awards img/awards6.webp" alt="Birla Estates Certificate">
                 <h3>Certificate of Appreciation</h3>
                 <p>Birla Estates</p>
             </div>
 
             <!-- AWARD 7 -->
             <div class="award-card">
-                <img src="/awards img/awards7.webp" alt="Adani Realty Certificate">
+                <img src="awards img/awards7.webp" alt="Adani Realty Certificate">
                 <h3>Business Growth Recognition</h3>
                 <p>Adani Realty</p>
             </div>
 
             <!-- AWARD 8 -->
             <div class="award-card">
-                <img src="/awards img/awards8.webp" alt="Central Park Excellence Certificate">
+                <img src="awards img/awards8.webp" alt="Central Park Excellence Certificate">
                 <h3>Recognition of Excellence</h3>
                 <p>Central Park</p>
             </div>
 
             <!-- AWARD 9 -->
             <div class="award-card">
-                <img src="/awards img/awards9.webp" alt="M3M Authorized Channel Associate">
+                <img src="awards img/awards9.webp" alt="M3M Authorized Channel Associate">
                 <h3>Authorized Channel Associate</h3>
                 <p>M3M Group</p>
             </div>
@@ -184,13 +184,13 @@
                 <h4>Follow Us On</h4>
 
                 <div class="footer-social">
-                    <a href="https://www.facebook.com/ApexLandbase"><img src="/img/fb.png" loading="lazy"
+                    <a href="https://www.facebook.com/ApexLandbase"><img src="img/fb.png" loading="lazy"
                             alt="facebook"></a>
-                    <a href="https://www.instagram.com/apexlandbase"><img src="/img/insta.png" loading="lazy"
+                    <a href="https://www.instagram.com/apexlandbase"><img src="img/insta.png" loading="lazy"
                             alt="instagram"></a>
-                    <a href="https://www.youtube.com/@apexlandbase"><img src="/img/youtube.png" loading="lazy"
+                    <a href="https://www.youtube.com/@apexlandbase"><img src="img/youtube.png" loading="lazy"
                             alt="youtube"></a>
-                    <a href="https://www.twitter.com/ApexLandbase"><img src="/img/twitter.png" loading="lazy"
+                    <a href="https://www.twitter.com/ApexLandbase"><img src="img/twitter.png" loading="lazy"
                             alt="twitter"></a>
                 </div>
             </div>
@@ -207,10 +207,10 @@
 
             <div class="footer-col">
                 <h3>Builders</h3>
-                <a href="/dlf/index.html">DLF</a>
-                <a href="/shobha/index.html">SHOBHA</a>
-                <a href="/delphine/index.html">CENTRAL PARK</a>
-                <a href="/godrej/index.html">GODREJ</a>
+                <a href="dlf/index.html">DLF</a>
+                <a href="shobha/index.html">SHOBHA</a>
+                <a href="delphine/index.html">CENTRAL PARK</a>
+                <a href="godrej/index.html">GODREJ</a>
             </div>
 
         </div>
@@ -219,7 +219,7 @@
             <p>copyright © 2026, apexlandbase</p>
         </div>
     </footer>
-<script src="/js/script.js"></script>
+<script src="js/script.js"></script>
 </body>
 
 </html>
