--- a/contact.html
+++ b/contact.html
@@ -11,8 +11,8 @@
   <meta name="robots" content="index, follow">
 
   <!-- CSS -->
-  <link rel="stylesheet" href="/editing/CSS/style.css">
-  <link rel="stylesheet" href="/editing/CSS/contact.css">
+  <link rel="stylesheet" href="editing/CSS/style.css">
+  <link rel="stylesheet" href="editing/CSS/contact.css">
 </head>
 
 
@@ -23,13 +23,13 @@
     <p>Call Now Best Real Estate Consultation: <a href="tel:+919999074263">+91 9999074263</a></p>
 
     <div class="social-icons">
-      <a href="https://www.facebook.com/ApexLandbase" target="_blank"><img src="/img/fb.png" loading="lazy"
+      <a href="https://www.facebook.com/ApexLandbase" target="_blank"><img src="img/fb.png" loading="lazy"
           alt="facebook" /></a>
-      <a href="https://www.instagram.com/apexlandbase" target="_blank"><img src="/img/insta.png" loading="lazy"
+      <a href="https://www.instagram.com/apexlandbase" target="_blank"><img src="img/insta.png" loading="lazy"
           alt="instagram" /></a>
-      <a href="https://www.youtube.com/@apexlandbase" target="_blank"><img src="/img/youtube.png" loading="lazy"
+      <a href="https://www.youtube.com/@apexlandbase" target="_blank"><img src="img/youtube.png" loading="lazy"
           alt="youtube" /></a>
-      <a href="https://www.twitter.com/ApexLandbase" target="_blank"><img src="/img/twitter.png" loading="lazy"
+      <a href="https://www.twitter.com/ApexLandbase" target="_blank"><img src="img/twitter.png" loading="lazy"
           alt="twitter Apex Landbase" /></a>
     </div>
   </header>
@@ -39,7 +39,7 @@
     <div class="nav-container">
       <!-- LEFT: Logo -->
       <a href="index.html" class="logo" aria-label="Apex Landbase Home">
-        <img src="/img/image.png" alt="Apex Landbase logo" fetchpriority="high">
+        <img src="img/image.png" alt="Apex Landbase logo" fetchpriority="high">
         <span class="brand">APEX LANDBASE</span>
       </a>
       <!-- MENUE BUTTON-->
@@ -85,7 +85,7 @@
           <h3>Get in Touch</h3>
 
           <p class="cf-item">
-            📞 <a href="tel::+91 9999074263">:+91 9999074263</a>
+            📞 <a href="tel::+919999074263">:+91 9999074263</a>
           </p>
 
           <p class="cf-item">
@@ -168,10 +168,10 @@
 
         <h4>Follow Us On</h4>
         <div class="footer-social">
-          <a href="https://www.facebook.com/ApexLandbase"><img src="/img/fb.png" loading="lazy" alt="facebook"></a>
-          <a href="https://www.instagram.com/apexlandbase"><img src="/img/insta.png" loading="lazy" alt="instagram"></a>
-          <a href="https://www.youtube.com/@apexlandbase"><img src="/img/youtube.png" loading="lazy" alt="youtube"></a>
-          <a href="https://www.twitter.com/ApexLandbase"><img src="/img/twitter.png" loading="lazy" alt="twitter"></a>
+          <a href="https://www.facebook.com/ApexLandbase"><img src="img/fb.png" loading="lazy" alt="facebook"></a>
+          <a href="https://www.instagram.com/apexlandbase"><img src="img/insta.png" loading="lazy" alt="instagram"></a>
+          <a href="https://www.youtube.com/@apexlandbase"><img src="img/youtube.png" loading="lazy" alt="youtube"></a>
+          <a href="https://www.twitter.com/ApexLandbase"><img src="img/twitter.png" loading="lazy" alt="twitter"></a>
         </div>
       </div>
 
@@ -187,10 +187,10 @@
 
       <div class="footer-col">
         <h3>Builders</h3>
-        <a href="/dlf/index.html">DLF</a>
-        <a href="/shobha/index.html">SHOBHA</a>
-        <a href="/delphine/index.html">CENTRAL PARK</a>
-        <a href="/godrej/index.html">GODREJ</a>
+        <a href="dlf/index.html">DLF</a>
+        <a href="shobha/index.html">SHOBHA</a>
+        <a href="delphine/index.html">CENTRAL PARK</a>
+        <a href="godrej/index.html">GODREJ</a>
       </div>
 
     </div>
@@ -206,7 +206,7 @@
     emailjs.init("Jt6Vp9_-hORbbxZ79");
   </script>
    <!-- MAIN JS -->
-  <script src="/js/script.js"></script>
+  <script src="js/script.js"></script>
 
 
 </body>
