--- a/dlf/index.html
+++ b/dlf/index.html
@@ -11,10 +11,10 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="canonical" href="https://yourdomain.com/dlf-privana">
+  <link rel="canonical" href="https://apexlandbase.com/dlf-privana">
 
   <!-- SAME CSS -->
-  <link rel="stylesheet" href="/editing/dlf.css">
+  <link rel="stylesheet" href="../editing/dlf.css">
 </head>
 
 <body>
@@ -51,25 +51,29 @@
   </header>
 
   <main>
+<!-- ================= HERO ================= -->
+<section class="hero hero-image">
 
-    <!-- ================= HERO ================= -->
-    <section class="hero">
-      <video autoplay muted loop playsinline>
-        <source src="https://www.pexels.com/download/video/34439771/" type="video/mp4">
-      </video>
-      <div class="hero-content">
-        <h1>DLF Privana<br>North & West</h1>
-        <p class="hero-subtitle">
-          Ultra-Luxury Residences in a 116-Acre Integrated Township
-        </p>
-        <div class="hero-highlights">
-          <span>DLF Legacy</span>
-          <span>Low Density Living</span>
-          <span>Sector 76–77</span>
-        </div>
-        <button class="brochure-header-btn" onclick="openBrochure()">Download Brochure</button>
-      </div>
-    </section>
+  <img src="images/hero.webp"
+       alt="DLF Luxury Residences Gurugram"
+       fetchpriority="high">
+
+  <div class="hero-content">
+    <h1>DLF Privana North</h1>
+    <p class="hero-subtitle">Ultra Luxury Residences, Gurugram</p>
+
+    <div class="hero-highlights">
+      <span>3 & 4 BHK</span>
+      <span>DLF Township</span>
+      <span>Premium Living</span>
+    </div>
+
+    <button class="brochure-header-btn" onclick="openBrochure()">
+      Download Brochure
+    </button>
+  </div>
+
+</section>
 
     <!-- ================= OVERVIEW (COMMON) ================= -->
     <section class="overview" id="overview">
@@ -94,7 +98,7 @@
         </div>
 
         <div class="overview-image">
-          <img src="/dlf/images/overview.webp" alt="DLF Privana Township">
+          <img src="../dlf/images/overview.webp" alt="DLF Privana Township">
         </div>
 
       </div>
@@ -123,8 +127,8 @@
     </div>
 
     <div class="residences-images">
-      <img src="/dlf/images/north1.webp" alt="Privana North Living" loading="lazy">
-      <img src="/dlf/images/north2.webp" alt="Privana North Bedroom" loading="lazy">
+      <img src="../dlf/images/north1.webp" alt="Privana North Living" loading="lazy">
+      <img src="../dlf/images/north2.webp" alt="Privana North Bedroom" loading="lazy">
     </div>
 
   </div>
@@ -133,8 +137,8 @@
   <div class="container residences-wrap reverse">
 
     <div class="residences-images">
-      <img src="/dlf/images/west1.webp" alt="Privana West Living" loading="lazy">
-      <img src="/dlf/images/west2.webp" alt="Privana West Bedroom" loading="lazy">
+      <img src="../dlf/images/west1.webp" alt="Privana West Living" loading="lazy">
+      <img src="../dlf/images/west2.webp" alt="Privana West Bedroom" loading="lazy">
     </div>
 
     <div class="residences-content">
@@ -162,7 +166,7 @@
 
     <!-- LEFT IMAGE -->
     <div class="master-image">
-      <img src="/dlf/images/masterplan.webp"
+      <img src="../dlf/images/masterplan.webp"
            class="master-thumb"
            alt="DLF Privana Master Plan"
            onclick="openMasterPlan()">
@@ -194,7 +198,7 @@
 <!-- ================= MASTER PLAN MODAL ================= -->
 <div id="masterModal" class="master-modal">
   <span class="master-close" onclick="closeMasterPlan()">×</span>
-  <img src="/dlf/images/masterplan.webp"
+  <img src="../dlf/images/masterplan.webp"
        class="master-full"
        alt="DLF Privana Master Plan Full View">
 </div>
@@ -235,8 +239,8 @@
     <div class="floorplan-images">
       <div class="fp-slider">
         <div class="fp-track">
-          <img src="/dlf/images/floorplan1.webp" alt="DLF Privana 3 BHK Floor Plan">
-          <img src="/dlf/images/floorplan2.webp" alt="DLF Privana 4 BHK Floor Plan">
+          <img src="../dlf/images/floorplan1.webp" alt="DLF Privana 3 BHK Floor Plan">
+          <img src="../dlf/images/floorplan2.webp" alt="DLF Privana 4 BHK Floor Plan">
         </div>
       </div>
     </div>
@@ -250,10 +254,10 @@
         <div class="section-line"></div>
 
         <div class="gallery">
-          <img src="/dlf/images/gallery1.webp">
-          <img src="/dlf/images/gallery2.webp">
-          <img src="/dlf/images/gallery3.webp">
-          <img src="/dlf/images/gallery4.webp">
+          <img src="../dlf/images/gallery1.webp" alt="dlf luxuy buildings">
+          <img src="../dlf/images/gallery2.webp"alt="greenery">
+          <img src="../dlf/images/gallery3.webp" alt="luxury wide Balcony">
+          <img src="../dlf/images/gallery4.webp" alt="wide rooms">
         </div>
       </div>
     </section>
@@ -263,7 +267,7 @@
       <div class="apex-amenities-wrap">
 
         <div class="amenities-image">
-          <img src="/dlf/images/amenities.webp" alt="dlf amenities">
+          <img src="../dlf/images/amenities.webp" alt="dlf amenities">
         </div>
 
         <div class="amenities-content">
@@ -287,7 +291,7 @@
     <button id="apexPopupClose" class="apex-popup-close">&times;</button>
 
     <div class="apex-popup-header">
-      <img src="/img/image.png" alt="Apex Landbase">
+      <img src="../img/image.png" alt="Apex Landbase">
       <h3>Get Exclusive Details</h3>
       <p>Register now to receive price, floor plan & offers</p>
     </div>
@@ -384,7 +388,7 @@
     );
   </script>
 
-  <script src="/js/dlf.js" defer></script>
+  <script src="../js/dlf.js" defer></script>
 </body>
 
 </html>
