--- a/elan/index.html
+++ b/elan/index.html
@@ -16,7 +16,7 @@
   <link rel="canonical" href="https://apexlandbase.com/elan-the-statement-sector-49">
 
   <!-- STYLESHEET -->
-  <link rel="stylesheet" href="/editing/elan.css">
+  <link rel="stylesheet" href="../editing/elan.css">
 
   <!-- PERFORMANCE (optional but recommended) -->
   <link rel="preconnect" href="https://elan-in.b-cdn.net" crossorigin>
@@ -64,8 +64,8 @@
   <!-- ================= HERO ================= -->
   <section class="hero">
 
-    <video autoplay muted loop playsinline preload="metadata" poster="/elan/images/amenities.webp">
-      <source src="/elan/images/hero.webm" type="video/webm">
+    <video autoplay muted loop playsinline preload="metadata" poster="../elan/images/amenities.webp">
+      <source src="../elan/images/hero.webm" type="video/webm">
     </video>
 
     <div class="hero-content">
@@ -132,7 +132,7 @@
         </ul>
       </div>
       <div class="overview-image">
-        <img src="/elan/images/overview.webp" alt="Elan The Statement Sector 49 Gurugram Ultra Luxury Residences"
+        <img src="../elan/images/overview.webp" alt="Elan The Statement Sector 49 Gurugram Ultra Luxury Residences"
           width="1600" height="900" loading="lazy" decoding="async">
       </div>
   </section>
@@ -161,8 +161,8 @@
       </div>
 
       <div class="residences-images">
-        <img src="/elan/images/residence1.webp" alt="Luxury Living Room" loading="lazy">
-        <img src="/elan/images/residence2.webp" alt="Luxury Bedroom" loading="lazy">
+        <img src="../elan/images/residence1.webp" alt="Luxury Living Room" loading="lazy">
+        <img src="../elan/images/residence2.webp" alt="Luxury Bedroom" loading="lazy">
       </div>
 
     </div>
@@ -174,7 +174,7 @@
 
       <!-- LEFT : MASTER PLAN IMAGE -->
       <div class="master-image">
-        <img src="/elan/images/masterplan1.webp" alt="Elan The Statement Master Plan" loading="lazy" class="master-thumb"
+        <img src="../elan/images/masterplan1.webp" alt="Elan The Statement Master Plan" loading="lazy" class="master-thumb"
           onclick="openMasterPlan()">
 
         <small class="click-note">Click to view full master plan</small>
@@ -209,7 +209,7 @@
   <!-- ================= MASTER PLAN MODAL ================= -->
   <div id="masterModal" class="master-modal">
     <span class="master-close" onclick="closeMasterPlan()">×</span>
-    <img src="/elan/images/masterplan1.webp" alt="Elan The Statement Master Plan Full View" class="master-full">
+    <img src="../elan/images/masterplan1.webp" alt="Elan The Statement Master Plan Full View" class="master-full">
   </div>
   <!-- ================= FLOOR PLAN ================= -->
   <section id="floorplan" class="apex-floorplan">
@@ -238,7 +238,7 @@
           <li>Sky deck options in penthouse residences</li>
         </ul>
 
-        <a href="/elan/brochure/Elan The Statement - Floor Plan.pdf" class="floorplan-btn" target="_blank" download>
+        <a href="../elan/brochure/Elan The Statement - Floor Plan.pdf" class="floorplan-btn" target="_blank" download>
           Download All Floor Plans
         </a>
 
@@ -250,10 +250,10 @@
         <div class="fp-slider">
           <div class="fp-track">
 
-            <img src="/elan/images/floorplan.webp" alt="Elan The Statement Sample 4 BHK Ground Floor Plan"
+            <img src="../elan/images/floorplan.webp" alt="Elan The Statement Sample 4 BHK Ground Floor Plan"
               loading="lazy">
 
-            <img src="/elan/images/floorplan2.webp" alt="Elan The Statement Sample Typical Floor Plan" loading="lazy">
+            <img src="../elan/images/floorplan2.webp" alt="Elan The Statement Sample Typical Floor Plan" loading="lazy">
 
           </div>
         </div>
@@ -270,10 +270,10 @@
       <div class="section-line"></div>
 
       <div class="gallery">
-        <img src="/elan/images/gallery1.webp" alt="luxurious hall" loading="lazy">
-        <img src="/elan/images/gallery2.webp" alt="elan luxury balcony view" loading="lazy">
-        <img src="/elan/images/gallery3.webp" alt="Elan The Statement main entrance view Sector 49 Gurugram" loading="lazy">
-        <img src="/elan/images/gallery4.webp" alt="gardening area" loading="lazy">
+        <img src="../elan/images/gallery1.webp" alt="luxurious hall" loading="lazy">
+        <img src="../elan/images/gallery2.webp" alt="elan luxury balcony view" loading="lazy">
+        <img src="../elan/images/gallery3.webp" alt="Elan The Statement main entrance view Sector 49 Gurugram" loading="lazy">
+        <img src="../elan/images/gallery4.webp" alt="gardening area" loading="lazy">
       </div>
     </div>
   </section>
@@ -283,7 +283,7 @@
     <div class="apex-amenities-wrap">
 
       <div class="amenities-image">
-        <img src="/elan/images/amenities.webp" alt="The elan Statement-luxury amenities" loading="lazy">
+        <img src="../elan/images/amenities.webp" alt="The elan Statement-luxury amenities" loading="lazy">
       </div>
 
       <div class="amenities-content">
@@ -310,7 +310,7 @@
       </button>
 
       <div class="apex-popup-header">
-        <img src="/img/image.png" alt="Apex Landbase Logo">
+        <img src="../img/image.png" alt="Apex Landbase Logo">
         <h3>Get Exclusive Details</h3>
         <p>Register now to receive price, floor plan & offers</p>
       </div>
@@ -429,7 +429,7 @@
   </script>
 
   <!-- SAME JS AS MAX -->
-  <script src="/js/elan.js" defer></script>
+  <script src="../js/elan.js" defer></script>
 
 </body>
 
