--- a/godrej/index.html
+++ b/godrej/index.html
@@ -21,9 +21,9 @@
   <meta property="og:url" content="https://apexlandbase.com/godrej-miraya">
 
   <!-- CSS -->
-  <link rel="stylesheet" href="/editing/elan.css">
+  <link rel="stylesheet" href="../editing/elan.css">
 
-  <link rel="icon" href="/favicon.ico">
+  <link rel="icon" href="../favicon.ico">
 </head>
 
 <body>
@@ -65,9 +65,8 @@
   <!-- ================= HERO ================= -->
   <section class="hero">
 
-    <video autoplay muted loop playsinline preload="none" poster="/godrej/images/hero-poster.webp">
-      <source src="/godrej/img/hero.webm" type="video/webm">
-      <source src="/godrej/videos/hero.mp4" type="video/mp4">
+    <video autoplay muted loop playsinline preload="none" poster="../godrej/images/hero-poster.webp">
+      <source src="../godrej/img/hero.webm" type="video/webm">
     </video>
 
     <div class="hero-content">
@@ -158,7 +157,7 @@
 
       <!-- RIGHT IMAGE -->
       <div class="overview-image">
-        <img src="/godrej/img/overview.webp"
+        <img src="../godrej/img/overview.webp"
           alt="Godrej Miraya ultra luxury residential project overview on Golf Course Road Gurugram" loading="lazy">
       </div>
 
@@ -179,8 +178,8 @@
       </div>
 
       <div class="residences-images">
-        <img src="/godrej/img/residence.webp" loading="lazy" alt="Godrej Miraya luxury living room">
-        <img src="/godrej/img/residence2.webp" loading="lazy" alt="Godrej Miraya luxury bedroom">
+        <img src="../godrej/img/residence.webp" loading="lazy" alt="Godrej Miraya luxury living room">
+        <img src="../godrej/img/residence2.webp" loading="lazy" alt="Godrej Miraya luxury bedroom">
       </div>
 
     </div>
@@ -195,9 +194,9 @@
 
       <div class="gallery">
         <!-- ✅ GALLERY ORDER -->
-        <img src="/godrej/img/gallery.webp" alt="Godrej Miraya luxury dining interior Sector 43 Gurgaon" loading="lazy">
+        <img src="../godrej/img/gallery.webp" alt="Godrej Miraya luxury dining interior Sector 43 Gurgaon" loading="lazy">
 
-        <img src="/godrej/img/gallery2.webp" alt="Godrej Miraya balcony view Golf Course Road Gurgaon" loading="lazy">
+        <img src="../godrej/img/gallery2.webp" alt="Godrej Miraya balcony view Golf Course Road Gurgaon" loading="lazy">
       </div>
 
     </div>
@@ -208,7 +207,7 @@
 
       <!-- LEFT IMAGE -->
       <div class="master-image">
-        <img src="/godrej/img/masterplan.webp" class="master-thumb" alt="Godrej Miraya master plan"
+        <img src="../godrej/img/masterplan.webp" class="master-thumb" alt="Godrej Miraya master plan"
           onclick="openMasterPlan()">
         <small class="click-note">Click to view full master plan</small>
       </div>
@@ -232,7 +231,7 @@
   <!-- ================= MASTER PLAN MODAL ================= -->
   <div id="masterModal" class="master-modal">
     <span class="master-close" onclick="closeMasterPlan()">×</span>
-    <img src="/godrej/img/masterplan.webp" class="master-full" alt="Godrej Miraya master plan full view">
+    <img src="../godrej/img/masterplan.webp" class="master-full" alt="Godrej Miraya master plan full view">
   </div>
  <section id="floorplan" class="apex-floorplan">
   <div class="floorplan-wrap">
@@ -274,8 +273,8 @@
       <div class="fp-slider">
         <div class="fp-track">
 
-          <img src="/godrej/img/floorplan1.webp" loading="lazy" alt="3 BHK Floor Plan">
-          <img src="/godrej/img/floorplan2.webp" loading="lazy" alt="4 BHK Floor Plan">
+          <img src="../godrej/img/floorplan1.webp" loading="lazy" alt="3 BHK Floor Plan">
+          <img src="../godrej/img/floorplan2.webp" loading="lazy" alt="4 BHK Floor Plan">
 
         </div>
       </div>
@@ -290,7 +289,7 @@
 
       <!-- LEFT IMAGE -->
       <div class="amenities-image">
-        <img src="/godrej/img/amenities1.webp" alt="Godrej Miraya luxury amenities" loading="lazy">
+        <img src="../godrej/img/amenities1.webp" alt="Godrej Miraya luxury amenities" loading="lazy">
       </div>
 
       <!-- RIGHT CONTENT -->
@@ -376,7 +375,7 @@
     </button>
 
     <div class="apex-popup-header">
-      <img src="/img/image.png" alt="Apex Landbase Logo">
+      <img src="../img/image.png" alt="Apex Landbase Logo">
       <h3>Get Exclusive Details</h3>
       <p>Register now to receive price, floor plan & offers</p>
     </div>
@@ -497,7 +496,7 @@
     );
   </script>
   <!-- ================= JS ================= -->
-  <script src="/js/godrej.js"></script>
+  <script src="../js/godrej.js"></script>
   <script type="application/ld+json">
 {
   "@context": "https://schema.org",
