--- a/max361/index.html
+++ b/max361/index.html
@@ -7,7 +7,7 @@
   <meta name="description"
     content="Max Estate 361 Sector 36A Gurugram offers luxury 3 & 4 BHK wellness residences by Max Estates near Dwarka Expressway. Get price, floor plans & brochure.">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-  <link rel="stylesheet" href="/editing/max361.css">
+  <link rel="stylesheet" href="../editing/max361.css">
   <link rel="canonical" href="https://apexlandbase.com/max-estate-361">
   <link rel="preconnect" href="https://maxestates-in.b-cdn.net" crossorigin>
 </head>
@@ -136,7 +136,7 @@
 
       <!-- RIGHT IMAGE -->
       <div class="overview-image">
-        <img src="/max361/images/central2.webp"
+        <img src="../max361/images/central2.webp"
           alt="Max Estate 361 luxury residential project overview in Sector 36A Gurugram" loading="lazy">
       </div>
 
@@ -166,8 +166,8 @@
       </div>
 
       <div class="residences-images">
-        <img src="/max361/images/interior2.webp" alt="Luxury Living Room">
-        <img src="/max361/images/central3.webp" alt="Central Greens View">
+        <img src="../max361/images/interior2.webp" alt="Luxury Living Room">
+        <img src="../max361/images/central3.webp" alt="Central Greens View">
       </div>
 
     </div>
@@ -179,9 +179,9 @@
 
       <!-- LEFT : MASTER PLAN IMAGES -->
       <div class="master-image slider">
-        <img src="/max361/images/master1.webp" class="mp1" alt="MAX Estate Master Plan Layout" loading="lazy">
+        <img src="../max361/images/master1.webp" class="mp1" alt="MAX Estate Master Plan Layout" loading="lazy">
 
-        <img src="/max361/images/master2.webp" class="mp2" alt="MAX Estate Site Layout Plan" loading="lazy">
+        <img src="../max361/images/master2.webp" class="mp2" alt="MAX Estate Site Layout Plan" loading="lazy">
       </div>
 
       <!-- RIGHT : CONTENT -->
@@ -220,10 +220,10 @@
 
       <div class="gallery">
         <!-- GALLERY ORDER -->
-        <img src="/max361/images/interior1.webp" alt="Dining Interior">
-        <img src="/max361/images/interior3.webp" alt="Balcony View">
-        <img src="/max361/images/club2.webp" alt="Indoor Games">
-        <img src="/max361/images/club3.webp" alt="Fitness Centre">
+        <img src="../max361/images/interior1.webp" alt="Dining Interior" loading="lazy">
+        <img src="../max361/images/interior3.webp" alt="Balcony View" loading="lazy">
+        <img src="../max361/images/club2.webp" alt="Indoor Games" loading="lazy">
+        <img src="../max361/images/club3.webp" alt="Fitness Centre" loading="lazy">
       </div>
 
     </div>
@@ -236,7 +236,7 @@
 
       <!-- LEFT IMAGE -->
       <div class="amenities-image">
-        <img src="/max361/images/club1.webp" alt="Outdoor amenities">
+        <img src="../max361/images/club1.webp" alt="Outdoor amenities" loading="lazy">
       </div>
       <div class="amenities-content">
 
@@ -322,7 +322,7 @@
     </button>
 
     <div class="apex-popup-header">
-      <img src="/img/image.png" alt="Apex Landbase Logo">
+      <img src="../img/image.png" alt="Apex Landbase Logo">
       <h3>Get Exclusive Details</h3>
       <p>Register now to receive price, floor plan & offers</p>
     </div>
@@ -500,7 +500,7 @@
       SUPABASE_KEY
     );
   </script>
-  <script src="/js/max.js" defer></script>
+  <script src="../js/max.js" defer></script>
 
 </body>
 
