--- a/residential.html
+++ b/residential.html
@@ -13,7 +13,7 @@
     <meta name="author" content="Apex Landbase">
 
     <!-- SAME CSS -->
-    <link rel="stylesheet" href="/editing/CSS/style.css">
+    <link rel="stylesheet" href="editing/CSS/style.css">
 
     <link rel="canonical" href="https://apexlandbase.com/residential.html">
 </head>
@@ -25,13 +25,13 @@
     <p>Call Now Best Real Estate Consultation: <a href="tel:+919999074263">+91 9999074263</a></p>
 
     <div class="social-icons">
-      <a href="https://www.facebook.com/ApexLandbase" target="_blank"><img src="/img/fb.png" loading="lazy"
+      <a href="https://www.facebook.com/ApexLandbase" target="_blank"><img src="img/fb.png" loading="lazy"
           alt="facebook" /></a>
-      <a href="https://www.instagram.com/apexlandbase" target="_blank"><img src="/img/insta.png" loading="lazy"
+      <a href="https://www.instagram.com/apexlandbase" target="_blank"><img src="img/insta.png" loading="lazy"
           alt="instagram" /></a>
-      <a href="https://www.youtube.com/@apexlandbase" target="_blank"><img src="/img/youtube.png" loading="lazy"
+      <a href="https://www.youtube.com/@apexlandbase" target="_blank"><img src="img/youtube.png" loading="lazy"
           alt="youtube" /></a>
-      <a href="https://www.twitter.com/ApexLandbase" target="_blank"><img src="/img/twitter.png" loading="lazy"
+      <a href="https://www.twitter.com/ApexLandbase" target="_blank"><img src="img/twitter.png" loading="lazy"
           alt="twitter Apex Landbase" /></a>
     </div>
   </header>
@@ -41,7 +41,7 @@
     <div class="nav-container">
       <!-- LEFT: Logo -->
       <a href="index.html" class="logo" aria-label="Apex Landbase Home">
-        <img src="/img/image.png" alt="Apex Landbase logo" fetchpriority="high">
+        <img src="img/image.png" alt="Apex Landbase logo" fetchpriority="high">
         <span class="brand">APEX LANDBASE</span>
       </a>
       <!-- MENUE BUTTON-->
@@ -86,8 +86,8 @@
             <div class="property-grid">
 
                 <!-- MAX 361 -->
-                <a href="/max361/index.html" class="property-card">
-                    <img src="/img/MAX 361.webp" alt="MAX 361">
+                <a href="max361/index.html" class="property-card">
+                    <img src="img/max361.webp" alt="MAX 361">
                     <div class="property-info">
                         <h3>MAX 361</h3>
                         <p>Luxury Residential Project</p>
@@ -100,7 +100,7 @@
 
                 <!-- SHOBHA ARANYA -->
                 <a href="/shobha/index.html" class="property-card">
-                    <img src="/img/SHOBHA A..webp" alt="Shobha Aranya">
+                    <img src="/img/shobha.webp" alt="Shobha Aranya">
                     <div class="property-info">
                         <h3>SHOBHA ARANYA</h3>
                         <p>Premium Apartments</p>
@@ -112,8 +112,8 @@
                 </a>
 
                 <!-- CENTRAL PARK DELPHINE -->
-                <a href="/delphine/index.html" class="property-card">
-                    <img src="/img/CENTRAL DELPHINE.webp" width="320" height="210" loading="lazy" decoding="async"
+                <a href="delphine/index.html" class="property-card">
+                    <img src="img/delphine.webp" width="320" height="210" loading="lazy" decoding="async"
                         fetchpriority="low" style="aspect-ratio: 320 / 210; object-fit: cover;"
                         alt="Central Park Delphine">
                     <div class="property-info">
@@ -127,8 +127,8 @@
                 </a>
 
                 <!-- EMAAR SERENITY HILLS-->
-                <a href="/emaar/index.html" class="property-card">
-                    <img src="/img/emaar.webp" width="320" height="210" loading="lazy" decoding="async"
+                <a href="emaar/index.html" class="property-card">
+                    <img src="img/emaar.webp" width="320" height="210" loading="lazy" decoding="async"
                         fetchpriority="low" style="aspect-ratio: 320 / 210; object-fit: cover;" alt="Adani Realty">
                     <div class="property-info">
                         <h3>EMAAR SERENITY HILLS</h3>
@@ -141,8 +141,8 @@
                 </a>
 
                 <!-- ASHIANA AAROHAM -->
-                <a href="/ashiana/index.html" class="property-card">
-                    <img src="/img/ASHIANA.A.webp" width="320" height="210" loading="lazy" decoding="async"
+                <a href="ashiana/index.html" class="property-card">
+                    <img src="img/ashiana.webp" width="320" height="210" loading="lazy" decoding="async"
                         fetchpriority="low" style="aspect-ratio: 320 / 210; object-fit: cover;" alt="Ashiana Aaroham">
                     <div class="property-info">
                         <h3>ASHIANA AAROHAM</h3>
@@ -155,8 +155,8 @@
                 </a>
 
                 <!-- THE WESTIN RESIDENCES -->
-                <a href="/whiteland/index.html" class="property-card">
-                    <img src="/img/WESTIN.webp" width="320" height="210" loading="lazy" decoding="async"
+                <a href="whiteland/index.html" class="property-card">
+                    <img src="img/westin.webp" width="320" height="210" loading="lazy" decoding="async"
                         fetchpriority="low" style="aspect-ratio: 320 / 210; object-fit: cover;"
                         alt="The Westin Residences Whiteland">
                     <div class="property-info">
@@ -170,8 +170,8 @@
                 </a>
 
                 <!-- DLF PRIVANA NORTH -->
-                <a href="/dlf/index.html" class="property-card">
-                    <img src="/img/Dlf.webp" width="320" height="210" loading="lazy" decoding="async"
+                <a href="dlf/index.html" class="property-card">
+                    <img src="img/Dlf.webp" width="320" height="210" loading="lazy" decoding="async"
                         fetchpriority="low" style="aspect-ratio: 320 / 210; object-fit: cover;" alt="DLF Privana North">
                     <div class="property-info">
                         <h3>DLF PRIVANA NORTH</h3>
@@ -184,8 +184,8 @@
                 </a>
 
                 <!-- ELAN THE STATEMENT -->
-                <a href="/elan/index.html" class="property-card">
-                    <img src="/img/ELAN-STATEMENT.webp" width="320" height="210" loading="lazy" decoding="async"
+                <a href="elan/index.html" class="property-card">
+                    <img src="img/ELAN-STATEMENT.webp" width="320" height="210" loading="lazy" decoding="async"
                         fetchpriority="low" style="aspect-ratio: 320 / 210; object-fit: cover;"
                         alt="Elan The Statement">
                     <div class="property-info">
@@ -199,8 +199,8 @@
                 </a>
 
                 <!-- GODREJ MIRAYA -->
-                <a href="/godrej/index.html" class="property-card">
-                    <img src="/img/GODREJ.webp" width="320" height="210" loading="lazy" decoding="async"
+                <a href="godrej/index.html" class="property-card">
+                    <img src="img/GODREJ.webp" width="320" height="210" loading="lazy" decoding="async"
                         fetchpriority="low" style="aspect-ratio: 320 / 210; object-fit: cover;" alt="Godrej Miraya">
                     <div class="property-info">
                         <h3>GODREJ MIRAYA</h3>
@@ -259,13 +259,13 @@
                 <h4>Follow Us On</h4>
 
                 <div class="footer-social">
-                    <a href="https://www.facebook.com/ApexLandbase"><img src="/img/fb.png" loading="lazy"
+                    <a href="https://www.facebook.com/ApexLandbase"><img src="img/fb.png" loading="lazy"
                             alt="facebook"></a>
-                    <a href="https://www.instagram.com/apexlandbase"><img src="/img/insta.png" loading="lazy"
+                    <a href="https://www.instagram.com/apexlandbase"><img src="img/insta.png" loading="lazy"
                             alt="instagram"></a>
-                    <a href="https://www.youtube.com/@apexlandbase"><img src="/img/youtube.png" loading="lazy"
+                    <a href="https://www.youtube.com/@apexlandbase"><img src="img/youtube.png" loading="lazy"
                             alt="youtube"></a>
-                    <a href="https://www.twitter.com/ApexLandbase"><img src="/img/twitter.png" loading="lazy"
+                    <a href="https://www.twitter.com/ApexLandbase"><img src="img/twitter.png" loading="lazy"
                             alt="twitter"></a>
                 </div>
             </div>
@@ -282,10 +282,10 @@
 
             <div class="footer-col">
                 <h3>Builders</h3>
-                <a href="/dlf/index.html">DLF</a>
-                <a href="/shobha/index.html">SHOBHA</a>
-                <a href="/delphine/index.html">CENTRAL PARK</a>
-                <a href="/godrej/index.html">GODREJ</a>
+                <a href="dlf/index.html">DLF</a>
+                <a href="shobha/index.html">SHOBHA</a>
+                <a href="delphine/index.html">CENTRAL PARK</a>
+                <a href="godrej/index.html">GODREJ</a>
             </div>
 
         </div>
@@ -295,7 +295,7 @@
         </div>
     </footer>
 
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
