--- a/shobha/index.html
+++ b/shobha/index.html
@@ -14,10 +14,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#0e0e0e">
 
-  <link rel="canonical" href="https://yourdomain.com/sobha-aranya">
+  <link rel="canonical" href="https://apexlandbase.com/sobha-aranya">
 
   <!-- SAME CSS AS ELAN -->
-  <link rel="stylesheet" href="/editing/CSS/shobha.css">
+  <link rel="stylesheet" href="../editing/CSS/shobha.css">
 </head>
 
 <body>
@@ -60,8 +60,8 @@
 
 <!-- ================= HERO ================= -->
 <section class="hero">
- <video autoplay muted loop playsinline preload="metadata" poster="/shobha/images/hero.webp">
-    <source src="/shobha/images/hero.webm.mp4" type="video/mp4">
+ <video autoplay muted loop playsinline preload="metadata" poster="../shobha/images/hero.webp">
+    <source src="../shobha/images/hero.webm" type="video/webm">
   </video>
 
   <div class="hero-content">
@@ -130,7 +130,7 @@
     </div>
 
     <div class="overview-image">
-      <img src="/shobha/images/overview.webp"
+      <img src="../shobha/images/overview.webp"
            alt="Sobha Aranya Project Overview">
     </div>
 
@@ -161,8 +161,8 @@
     </div>
 
     <div class="residences-images">
-      <img src="/shobha/images/residence1.webp" alt="Sobha Aranya Living Room" loading="lazy">
-      <img src="/shobha/images/residence2.webp" alt="Sobha Aranya Bedroom" loading="lazy">
+      <img src="../shobha/images/residence1.webp" alt="Sobha Aranya Living Room" loading="lazy">
+      <img src="../shobha/images/residence2.webp" alt="Sobha Aranya Bedroom" loading="lazy">
     </div>
 
   </div>
@@ -174,7 +174,7 @@
 
       <!-- LEFT IMAGE -->
       <div class="master-image">
-      <img src="/shobha/images/masterplan.webp"
+      <img src="../shobha/images/masterplan.webp"
            class="master-thumb"
            alt="Shobha Aranya Master Plan"
            onclick="openMasterPlan()">
@@ -205,7 +205,7 @@
   <!-- ================= MASTER PLAN MODAL ================= -->
   <div id="masterModal" class="master-modal">
     <span class="master-close" onclick="closeMasterPlan()">×</span>
-    <img src="/shobha/images/masterplan.webp" class="master-full" alt="Shobha Aranya master plan full view">
+    <img src="../shobha/images/masterplan.webp" class="master-full" alt="Shobha Aranya master plan full view">
   </div>
 
 <!-- ================= FLOOR PLAN ================= -->
@@ -223,7 +223,7 @@
         <li>Thoughtful room zoning</li>
       </ul>
 
-      <a href="/shobha/brochure/shobha-aranya.pdf"
+      <a href="../shobha/brochure/shobha-aranya.pdf"
          class="floorplan-btn"
          target="_blank">
         Download Floor Plans
@@ -233,9 +233,9 @@
     <div class="floorplan-images">
       <div class="fp-slider">
         <div class="fp-track">
-          <img src="/shobha/images/floorplan1.webp"
+          <img src="../shobha/images/floorplan1.webp"
                alt="Sobha Aranya Floor Plan">
-               <img src="/shobha/images/floorplan2.webp"
+               <img src="../shobha/images/floorplan2.webp"
                alt="Sobha Aranya Floor Plan2">
         </div>
       </div>
@@ -251,10 +251,10 @@
     <div class="section-line"></div>
 
     <div class="gallery">
-      <img src="/shobha/images/gallery.webp" alt="dining area">
-      <img src="/shobha/images/gallery1.webp" alt="Bedroom">
-      <img src="/shobha/images/gallery2.webp" alt="outside view from balcony">
-      <img src="/shobha/images/gallery4.webp" alt="luxury bathroom">
+      <img src="../shobha/images/gallery.webp" alt="dining area" loading="lazy">
+      <img src="../shobha/images/gallery1.webp" alt="Bedroom" loading="lazy">
+      <img src="../shobha/images/gallery2.webp" alt="outside view from balcony" loading="lazy">
+      <img src="../shobha/images/gallery4.webp" alt="luxury bathroom"loading="lazy">
     </div>
   </div>
 </section>
@@ -264,7 +264,7 @@
   <div class="apex-amenities-wrap">
 
     <div class="amenities-image">
-      <img src="/shobha/images/amenities.webp"
+      <img src="../shobha/images/amenities.webp"
            alt="Sobha Aranya Amenities">
     </div>
 
@@ -295,7 +295,7 @@
       </button>
 
       <div class="apex-popup-header">
-        <img src="/img/image.png" alt="Apex Landbase Logo">
+        <img src="../img/image.png" alt="Apex Landbase Logo">
         <h3>Get Exclusive Details</h3>
         <p>Register now to receive price, floor plan & offers</p>
       </div>
@@ -410,7 +410,7 @@
     );
   </script>
   <!-- JS -->
-  <script src="/js/shobha.js" defer></script>
+  <script src="../js/shobha.js" defer></script>
 
 </body>
 
