--- a/terms-condition.html
+++ b/terms-condition.html
@@ -6,7 +6,7 @@
   <title>Terms & Conditions | Apex Landbase</title>
 
   
-  <link rel="stylesheet" href="/editing/CSS/style.css">
+  <link rel="stylesheet" href="editing/CSS/style.css">
 
   <style>
     .legal-wrapper {
@@ -48,13 +48,13 @@
     <p>Call Now Best Real Estate Consultation: <a href="tel:+919999074263">+91 9999074263</a></p>
 
     <div class="social-icons">
-      <a href="https://www.facebook.com/ApexLandbase" target="_blank"><img src="/img/fb.png" loading="lazy"
+      <a href="https://www.facebook.com/ApexLandbase" target="_blank"><img src="img/fb.png" loading="lazy"
           alt="facebook" /></a>
-      <a href="https://www.instagram.com/apexlandbase" target="_blank"><img src="/img/insta.png" loading="lazy"
+      <a href="https://www.instagram.com/apexlandbase" target="_blank"><img src="img/insta.png" loading="lazy"
           alt="instagram" /></a>
-      <a href="https://www.youtube.com/@apexlandbase" target="_blank"><img src="/img/youtube.png" loading="lazy"
+      <a href="https://www.youtube.com/@apexlandbase" target="_blank"><img src="img/youtube.png" loading="lazy"
           alt="youtube" /></a>
-      <a href="https://www.twitter.com/ApexLandbase" target="_blank"><img src="/img/twitter.png" loading="lazy"
+      <a href="https://www.twitter.com/ApexLandbase" target="_blank"><img src="img/twitter.png" loading="lazy"
           alt="twitter Apex Landbase" /></a>
     </div>
   </header>
@@ -64,7 +64,7 @@
     <div class="nav-container">
       <!-- LEFT: Logo -->
       <a href="index.html" class="logo" aria-label="Apex Landbase Home">
-        <img src="/img/image.png" alt="Apex Landbase logo" fetchpriority="high">
+        <img src="img/image.png" alt="Apex Landbase logo" fetchpriority="high">
         <span class="brand">APEX LANDBASE</span>
       </a>
       <!-- MENUE BUTTON-->
@@ -148,41 +148,58 @@
     </div>
   </main>
 
-  <!-- FOOTER (index.html se copy) -->
+<!-- ================= FOOTER ================= -->
   <footer class="main-footer">
     <div class="footer-container">
 
       <div class="footer-col">
         <h3>Contact Us</h3>
-        <p>📞 ::+91 9999074263</p>
-        <p>✉ info@apexlandbase.com</p>
-        <p>📍 Office No.28, Core-A, 2nd Floor Silverton Tower,<br>
-          Sector-50, Gurugram-122018, Haryana</p>
+
+        <p class="footer-item">
+          <span class="icon">📞</span>
+          <span>+91 9999074263</span>
+        </p>
+
+        <p class="footer-item">
+          <span class="icon">✉️</span>
+          <span>info@apexlandbase.com</span>
+        </p>
+
+        <p class="footer-item">
+          <span class="icon">📍</span>
+          <span>
+            Office No.28, Core-A,<br>
+            2nd Floor Silverton Tower,<br>
+            Sector-50, Gurugram – 122018, Haryana
+          </span>
+        </p>
 
         <h4>Follow Us On</h4>
+
         <div class="footer-social">
-          <a href="https://www.facebook.com/ApexLandbase"><img src="/img/fb.png" alt="facebook"></a>
-          <a href="https://www.instagram.com/apexlandbase"><img src="/img/insta.png" alt="instagram"></a>
-          <a href="https://www.youtube.com/@apexlandbase"><img src="/img/youtube.png" alt="youtube"></a>
-          <a href="https://www.twitter.com/ApexLandbase"><img src="/img/twitter.png" alt="twitter"></a>
+          <a href="https://www.facebook.com/ApexLandbase"><img src="img/fb.png" loading="lazy" alt="apexlandbase facebook"></a>
+          <a href="https://www.instagram.com/apexlandbase"><img src="img/insta.png" loading="lazy" alt="apexlandbase instagram"></a>
+          <a href="https://www.youtube.com/@apexlandbase"><img src="img/youtube.png" loading="lazy" alt="apexlandbase youtube"></a>
+          <a href="https://www.twitter.com/ApexLandbase"><img src="img/twitter.png" loading="lazy" alt="apexlandbase twitter"></a>
         </div>
       </div>
 
       <div class="footer-col">
         <h3>Quick Links</h3>
+        <a href="index.html">Home</a>
         <a href="about.html">About Us</a>
         <a href="index.html#projects">Projects</a>
         <a href="contact.html">Contact Us</a>
         <a href="privacy.html">Privacy Policy</a>
-        <a href="terms-condition.html">Terms &amp; Conditions</a>
+        <a href="terms-condition.html">Terms Conditions</a>
       </div>
 
       <div class="footer-col">
         <h3>Builders</h3>
-        <a href="/dlf/index.html">DLF</a>
-        <a href="/shobha/index.html">SHOBHA</a>
-        <a href="/delphine/index.html">CENTRAL PARK</a>
-        <a href="/godrej/index.html">GODREJ</a>
+        <a href="dlf/index.html">DLF</a>
+        <a href="shobha/index.html">SHOBHA</a>
+        <a href="delphine/index.html">CENTRAL PARK</a>
+        <a href="godrej/index.html">GODREJ</a>
       </div>
 
     </div>
