--- a/whiteland/index.html
+++ b/whiteland/index.html
@@ -7,7 +7,9 @@
   <meta name="description"
     content="Westin Residences Gurugram offers luxury 3 & 4 BHK branded residences by Whiteland. Largest Westin branded homes with resort-style amenities, biophilic masterplan, and global hospitality benefits.">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-  <link rel="stylesheet" href="/editing/whitland.css">
+  <link rel="canonical" href="https://apexlandbase.com/westin">
+  <meta name="robots" content="index, follow">
+  <link rel="stylesheet" href="../editing/whitland.css">
 </head>
 
 <body>
@@ -21,7 +23,7 @@
         <span class="project">RESIDENCES</span>
         <small class="tagline">GURUGRAM</small>
       </div>
-       <!-- MOBILE HAMBURGER (ADD HERE) -->
+      <!-- MOBILE HAMBURGER (ADD HERE) -->
       <div class="hamburger" id="hamburger">
         <span></span>
         <span></span>
@@ -44,8 +46,8 @@
 
   <!-- ================= HERO VIDEO ================= -->
   <section class="hero" id="hero">
-    <video autoplay muted loop playsinline preload="metadata">
-      <source src="/whiteland/images/hero.webm" type="video/mp4">
+    <video autoplay muted loop playsinline preload="metadata" poster="../whiteland/images/hero.webp">
+      <source src="/whiteland/images/hero.webm" type="video/webm">
     </video>
 
     <div class="hero-content">
@@ -120,7 +122,7 @@
 
       <!-- RIGHT IMAGE -->
       <div class="overview-image">
-        <img src="/whiteland/images/overview1.webp" alt="Westin Residences Overview" loading="lazy">
+        <img src="../whiteland/images/overview1.webp" alt="Westin Residences Overview" loading="lazy">
       </div>
 
     </div>
@@ -150,108 +152,106 @@
       </div>
 
       <div class="residences-images">
-        <img src="/whiteland/images/gallery3.webp" alt="Living Room" loading="lazy">
-        <img src="/whiteland/images/gallery4.webp" alt="Dining Space" loading="lazy">
+        <img src="../whiteland/images/gallery3.webp" alt="Living Room" loading="lazy">
+        <img src="../whiteland/images/gallery4.webp" alt="Dining Space" loading="lazy">
       </div>
 
     </div>
   </section>
-<!-- ================= MASTER PLAN ================= -->
- <section id="masterplan" class="apex-masterplan">
+  <!-- ================= MASTER PLAN ================= -->
+  <section id="masterplan" class="apex-masterplan">
     <div class="container master-wrap">
 
       <!-- LEFT IMAGE -->
       <div class="master-image">
-      <img src="/whiteland/images/masterplan.webp"
-           class="master-thumb"
-           alt="Westin Master Plan"
-           onclick="openMasterPlan()">
+        <img src="../whiteland/images/masterplan.webp" class="master-thumb" alt="Westin Master Plan"
+          onclick="openMasterPlan()">
         <small class="click-note">Click to view full master plan</small>
       </div>
 
-    <!-- RIGHT CONTENT -->
+      <!-- RIGHT CONTENT -->
       <div class="master-content">
         <h2 class="master-heading">Master Plan</h2>
         <span class="master-line"></span>
 
-      <p>
-        Westin Residences Gurugram is a thoughtfully planned urban resort-style
-        development featuring elevated towers, sunken clubhouse, zero
-        ground-level traffic and expansive landscaped greens.
-      </p>
+        <p>
+          Westin Residences Gurugram is a thoughtfully planned urban resort-style
+          development featuring elevated towers, sunken clubhouse, zero
+          ground-level traffic and expansive landscaped greens.
+        </p>
 
-      <ul class="master-list">
-        <li>Zero vehicular movement at ground level</li>
-        <li>Sunken clubhouse & wellness zones</li>
-        <li>Over 70% landscaped greens</li>
-        <li>Cycling & jogging tracks</li>
-      </ul>
+        <ul class="master-list">
+          <li>Zero vehicular movement at ground level</li>
+          <li>Sunken clubhouse & wellness zones</li>
+          <li>Over 70% landscaped greens</li>
+          <li>Cycling & jogging tracks</li>
+        </ul>
+      </div>
+
     </div>
-
-  </div>
-</section>
+  </section>
 
   <!-- ================= MASTER PLAN MODAL ================= -->
   <div id="masterModal" class="master-modal">
     <span class="master-close" onclick="closeMasterPlan()">×</span>
-    <img src="/whiteland/images/masterplan.webp" class="master-full" alt="westin master plan">
+    <img src="../whiteland/images/masterplan.webp" class="master-full" alt="westin master plan">
   </div>
- <!-- ================= FLOOR PLANS ================= -->
-<section id="floorplan" class="apex-floorplan" id="floorplan">
-  <div class="container floorplan-wrap">
+  <!-- ================= FLOOR PLANS ================= -->
+  <section id="floorplan" class="apex-floorplan">
+    <div class="container floorplan-wrap">
 
-    <!-- LEFT CONTENT -->
-    <div class="floorplan-content">
-      <h2 class="apex-title">Floor Plans</h2>
-      <span class="apex-line"></span>
+      <!-- LEFT CONTENT -->
+      <div class="floorplan-content">
+        <h2 class="apex-title">Floor Plans</h2>
+        <span class="apex-line"></span>
 
-      <p class="floorplan-text">
-        Westin Residences offers intelligently planned 3 & 4 BHK layouts with
-        expansive living spaces, private decks and seamless zoning for luxury living.
-      </p>
+        <p class="floorplan-text">
+          Westin Residences offers intelligently planned 3 & 4 BHK layouts with
+          expansive living spaces, private decks and seamless zoning for luxury living.
+        </p>
 
-      <ul class="floorplan-list">
-        <li>Private lift lobbies</li>
-        <li>Large balconies & decks</li>
-        <li>Multiple 3 & 4 BHK layouts</li>
-        <li>Optimized ventilation</li>
-      </ul>
+        <ul class="floorplan-list">
+          <li>Private lift lobbies</li>
+          <li>Large balconies & decks</li>
+          <li>Multiple 3 & 4 BHK layouts</li>
+          <li>Optimized ventilation</li>
+        </ul>
 
-      <div class="floorplan-tags">
-        <span>3 BHK</span>
-        <span>4 BHK</span>
-        <span>Large · Medium</span>
-      </div>
-    </div>
-
-    <!-- RIGHT : AUTO SLIDER -->
-    <div class="floorplan-images">
-      <div class="fp-slider">
-        <div class="fp-track" id="fpTrack">
-
-          <div class="fp-slide">
-            <img src="/whiteland/images/floorplan1.webp" alt="Core Plan 3 BHK" loading="lazy">
-          </div>
-
-          <div class="fp-slide">
-            <img src="/whiteland/images/floorplan2.webp" alt="Core Plan 4 BHK" loading="lazy">
-          </div>
-
-          <div class="fp-slide">
-            <img src="/whiteland/images/floorplanlg.webp" alt="4 BHK Large" loading="lazy">
-          </div>
-
-          <div class="fp-slide">
-            <img src="/whiteland/images/floorplanmd.webp" alt="4 BHK Medium" loading="lazy">
-          </div>
-
+        <div class="floorplan-tags">
+          <span>3 BHK</span>
+          <span>4 BHK</span>
+          <span>Large · Medium</span>
         </div>
       </div>
-    </div>
 
-  </div>
-</section>
- <!-- ================= GALLERY ================= -->
+      <!-- RIGHT : AUTO SLIDER -->
+      <div class="floorplan-images">
+        <div class="fp-slider">
+          <div class="fp-track" id="fpTrack">
+
+            <div class="fp-slide">
+              <img src="../whiteland/images/floorplan1.webp" alt="Core Plan 3 BHK" loading="lazy">
+            </div>
+
+            <div class="fp-slide">
+              <img src="../whiteland/images/floorplan2.webp" alt="Core Plan 4 BHK" loading="lazy">
+            </div>
+
+            <div class="fp-slide">
+              <img src="../whiteland/images/floorplanlg.webp" alt="4 BHK Large" loading="lazy">
+            </div>
+
+            <div class="fp-slide">
+              <img src="../whiteland/images/floorplanmd.webp" alt="4 BHK Medium" loading="lazy">
+            </div>
+
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </section>
+  <!-- ================= GALLERY ================= -->
   <section id="gallery">
     <div class="container">
 
@@ -259,10 +259,10 @@
       <div class="section-line"></div>
 
       <div class="gallery">
-        <img src="/whiteland/images/residence.webp" alt="greenery" loading="lazy">
-        <img src="/whiteland/images/gallery2.webp" alt="dinning area" loading="lazy">
-        <img src="/whiteland/images/gallery.webp" alt="luxury bedroom " loading="lazy">
-        <img src="/whiteland/images/gallery4.webp" alt="luxury dining area" loading="lazy">
+        <img src="../whiteland/images/residence.webp" alt="greenery" loading="lazy">
+        <img src="../whiteland/images/gallery2.webp" alt="dinning area" loading="lazy">
+        <img src="../whiteland/images/gallery.webp" alt="luxury bedroom " loading="lazy">
+        <img src="../whiteland/images/gallery4.webp" alt="luxury dining area" loading="lazy">
       </div>
 
     </div>
@@ -274,7 +274,7 @@
     <div class="apex-amenities-wrap">
 
       <div class="amenities-image">
-        <img src="/whiteland/images/amenities.webp" alt="Wellness Spaces" loading="lazy">
+        <img src="../whiteland/images/amenities.webp" alt="Wellness Spaces" loading="lazy">
       </div>
 
       <div class="amenities-content">
@@ -307,7 +307,7 @@
       </button>
 
       <div class="apex-popup-header">
-        <img src="/img/image.png" alt="Apex Landbase Logo">
+        <img src="../img/image.png" alt="Apex Landbase Logo">
         <h3>Get Exclusive Details</h3>
         <p>Register now to receive price, floor plan & offers</p>
       </div>
@@ -325,9 +325,9 @@
     </div>
   </div>
   <div id="thankYouToast" class="toast">
-      <strong>Thank you!</strong><br>
-      Our team will contact you shortly.
-    </div>
+    <strong>Thank you!</strong><br>
+    Our team will contact you shortly.
+  </div>
 
   <!-- ================= CONTACT ================= -->
   <section id="contact" class="contact-section">
@@ -375,34 +375,34 @@
       <a href="index.html">Apex Landbase</a>
     </p>
   </footer>
- <!-- ================= westin: BROCHURE MODAL ================= -->
-<div id="brochurePopup" class="brochure-modal" role="dialog" aria-modal="true">
+  <!-- ================= westin: BROCHURE MODAL ================= -->
+  <div id="brochurePopup" class="brochure-modal" role="dialog" aria-modal="true">
 
-  <div class="modal-box">
+    <div class="modal-box">
 
-    <span class="close-modal" onclick="closeBrochure()">×</span>
+      <span class="close-modal" onclick="closeBrochure()">×</span>
 
-    <h3>Download Brochure</h3>
-    <p>Please fill your details to get the brochure</p>
+      <h3>Download Brochure</h3>
+      <p>Please fill your details to get the brochure</p>
 
-    <form id="brochureForm">
+      <form id="brochureForm">
 
-      <input type="text" name="name" placeholder="Your Name" required>
-      <input type="tel" name="phone" placeholder="Phone Number" required>
-      <input type="email" name="email" placeholder="Email Address" required>
+        <input type="text" name="name" placeholder="Your Name" required>
+        <input type="tel" name="phone" placeholder="Phone Number" required>
+        <input type="email" name="email" placeholder="Email Address" required>
 
-      <!-- TRACKING -->
-      <input type="hidden" name="source" value="Brochure Download">
-      <input type="hidden" name="project" value="WESTIN">
+        <!-- TRACKING -->
+        <input type="hidden" name="source" value="Brochure Download">
+        <input type="hidden" name="project" value="WESTIN">
 
-      <button type="submit">Submit & Download</button>
+        <button type="submit">Submit & Download</button>
 
-    </form>
+      </form>
+
+    </div>
 
   </div>
 
-</div>
-  
   </div>
   <!-- EMAILJS -->
   <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
@@ -422,7 +422,7 @@
     );
   </script>
 
-  <script src="/js/whiteland.js" defer></script>
+  <script src="../js/whiteland.js" defer></script>
 
 </body>
 
