--- a/ashiana/index.html
+++ b/ashiana/index.html
@@ -7,7 +7,7 @@
   <meta name="description"
     content="Ashiana Aaroham Gurugram – premium kid-centric residences with international standard sports, learning hub, live & learn programs, podium-level amenities, and curated growth experiences.">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-  <link rel="stylesheet" href="/editing/ashiana.css">
+  <link rel="stylesheet" href="../editing/ashiana.css">
 </head>
 
 <body>
@@ -44,8 +44,8 @@
 
   <!-- ================= HERO ================= -->
   <section class="hero">
-    <video autoplay muted loop playsinline preload="metadata">
-      <source src="/ashiana/images/hero.webm" type="video/webm">
+    <video autoplay muted loop playsinline preload="metadata" poster="images/hero.webp">
+      <source src="images/hero.webm" type="video/webm">
     </video>
 
     <div class="hero-content">
@@ -108,7 +108,7 @@
       </div>
 
       <div class="overview-image">
-        <img src="/ashiana/images/overview.webp" alt="Ashiana Aaroham Overview" loading="lazy">
+        <img src="images/overview.webp" alt="Ashiana Aaroham Overview" loading="lazy">
       </div>
 
     </div>
@@ -138,8 +138,8 @@
       </div>
 
       <div class="residences-images">
-        <img src="/ashiana/images/highlight.webp" alt="Sports Facilities">
-        <img src="/ashiana/images/highlight2.webp" alt="Kids Zone">
+        <img src="images/highlight.webp" alt="Sports Facilities">
+        <img src="images/highlight2.webp" alt="Kids Zone">
       </div>
 
     </div>
@@ -168,8 +168,8 @@
     </div>
 
     <div class="residences-images">
-      <img src="/ashiana/images/residence.webp" alt="Aaroham Residence Interior">
-      <img src="/ashiana/images/residence1.webp" alt="Aaroham Balcony View">
+      <img src="images/residence.webp" alt="Aaroham Residence Interior">
+      <img src="images/residence1.webp" alt="Aaroham Balcony View">
     </div>
 
   </div>
@@ -199,8 +199,8 @@
       </div>
 
       <div class="residences-images">
-        <img src="/ashiana/images/learninghub.webp" alt="Learning Hub">
-        <img src="/ashiana/images/learninghub1.webp" alt="Music Studio">
+        <img src="images/learninghub.webp" alt="Learning Hub">
+        <img src="images/learninghub1.webp" alt="Music Studio">
       </div>
 
     </div>
@@ -227,8 +227,8 @@
       </div>
 
       <div class="amenities-images">
-        <img src="/ashiana/images/amenties.webp" alt="Music Studio">
-        <img src="/ashiana/images/amenities1.webp" alt="club area">
+        <img src="images/amenities.webp" alt="Music Studio">
+        <img src="images/amenities1.webp" alt="club area">
       </div>
 
     </div>
@@ -240,7 +240,7 @@
 
       <!-- LEFT IMAGE -->
       <div class="master-image">
-        <img src="/ashiana/images/masterplan.webp" class="master-thumb" alt="Ashiana Aaroham master plan"
+        <img src="images/masterplan.webp" class="master-thumb" alt="Ashiana Aaroham master plan"
           onclick="openMasterPlan()">
         <small class="click-note">Click to view full master plan</small>
       </div>
@@ -268,7 +268,7 @@
   <!-- ================= MASTER PLAN MODAL ================= -->
   <div id="masterModal" class="master-modal">
     <span class="master-close" onclick="closeMasterPlan()">×</span>
-    <img src="/ashiana/images/masterplan.webp" class="master-full" alt="ASHIANA AAROHAM master plan full view">
+    <img src="images/masterplan.webp" class="master-full" alt="ASHIANA AAROHAM master plan full view">
   </div>
 
   <!-- ================= GALLERY ================= -->
@@ -278,10 +278,10 @@
       <div class="section-line"></div>
 
       <div class="gallery">
-        <img src="/ashiana/images/projectGallery1.webp.jpeg" alt="" loading="lazy">
-        <img src="/ashiana/images/projectGallery2.webp.jpeg" alt="" loading="lazy">
-        <img src="/ashiana/images/projectGallery3.webp.jpeg" alt="" loading="lazy">
-        <img src="/ashiana/images/projectGallery4.webp.jpeg" alt="" loading="lazy">
+        <img src="images/projectGallery1.webp" alt="outside view" loading="lazy">
+        <img src="images/projectGallery2.webp" alt="dinning area" loading="lazy">
+        <img src="images/projectGallery3.webp" alt="bedroom area" loading="lazy">
+        <img src="images/projectGallery4.webp" alt="all over view" loading="lazy">
       </div>
     </div>
   </section>
@@ -330,7 +330,7 @@
       </button>
 
       <div class="apex-popup-header">
-        <img src="/img/image.png" alt="Apex Landbase Logo">
+        <img src="../img/image.png" alt="Apex Landbase Logo">
         <h3>Get Exclusive Details</h3>
         <p>Register now to receive price, floor plan & offers</p>
       </div>
@@ -395,7 +395,7 @@
       SUPABASE_KEY
     );
   </script>
-  <script src="/js/ashiana.js" defer></script>
+  <script src="../js/ashiana.js" defer></script>
 </body>
 
 </html>
