--- a/emaar/index.html
+++ b/emaar/index.html
@@ -17,7 +17,7 @@
   <link rel="canonical" href="https://example.com/emaar-serenity-hills-sector-86">
 
   <!-- SAME CSS AS ELAN -->
-  <link rel="stylesheet" href="/editing/emaar.css">
+  <link rel="stylesheet" href="../editing/emaar.css">
 </head>
 
 <body>
@@ -55,19 +55,28 @@
 
 <main>
 
-<!-- ================= HERO (BROCHURE PAGE 2) ================= -->
-<section class="hero">
-  <video autoplay muted loop playsinline>
-    <source src="https://www.pexels.com/download/video/15767944/" type="video/mp4">
-  </video>
+<!-- ================= HERO ================= -->
+<section class="hero hero-image">
 
-  <div class="hero-content serenity-content">
-    <p class="serenity-text">
-      Come Home to Acres of Nature<br>
-      Serenity Hills by Emaar India<br>
-      Sector 86, Gurugram
-    </p>
+  <img src="images/hero.webp"
+       alt="Emaar Luxury Residences Gurugram"
+       fetchpriority="high">
+
+  <div class="hero-content">
+    <h1>Emaar Serenity Hills</h1>
+    <p class="hero-subtitle">Luxury Residences, Sector 86 Gurugram</p>
+
+    <div class="hero-highlights">
+      <span>3, 3.5 & 4 BHK</span>
+      <span>Aravalli Facing</span>
+      <span>Low Density Living</span>
+    </div>
+
+    <button class="brochure-header-btn" onclick="openBrochure()">
+      Download Brochure
+    </button>
   </div>
+
 </section>
 
 <!-- ================= OVERVIEW ================= -->
@@ -92,7 +101,7 @@
     </div>
 
     <div class="overview-image">
-      <img src="/emaar/images/overview.webp" alt="Serenity Hills Central Greens" loading="lazy">
+      <img src="../emaar/images/overview.webp" alt="Serenity Hills Central Greens" loading="lazy">
     </div>
 
   </div>
@@ -114,8 +123,8 @@
     </div>
 
     <div class="residences-images">
-      <img src="/emaar/images/residence.webp" alt="Luxury Living Room" loading="lazy">
-      <img src="/emaar/images/residence1.webp" alt="Spacious Bedroom" loading="lazy">
+      <img src="../emaar/images/residence.webp" alt="Luxury Living Room" loading="lazy">
+      <img src="../emaar/images/residence1.webp" alt="Spacious Bedroom" loading="lazy">
     </div>
 
   </div>
@@ -126,7 +135,7 @@
   <div class="master-wrap">
 
     <div class="master-image">
-      <img src="/emaar/images/masterplan1.webp"
+      <img src="../emaar/images/masterplan1.webp"
            alt="Emaar Serenity Hills Master Plan" loading="lazy"
            class="master-thumb">
     </div>
@@ -163,9 +172,9 @@
     <div class="floorplan-images">
       <div class="fp-slider">
         <div class="fp-track">
-          <img src="/emaar/images/floorplan1.webp" alt="4 BHK Floor Plan" loading="lazy">
-          <img src="/emaar/images/floorplan2.webp" alt="3 BHK Large Floor Plan" loading="lazy">
-          <img src="/emaar/images/floorplan3.webp" alt="3 BHK Small Floor Plan" loading="lazy">
+          <img src="../emaar/images/floorplan1.webp" alt="4 BHK Floor Plan" loading="lazy">
+          <img src="../emaar/images/floorplan2.webp" alt="3 BHK Large Floor Plan" loading="lazy">
+          <img src="../emaar/images/floorplan3.webp" alt="3 BHK Small Floor Plan" loading="lazy">
         </div>
       </div>
     </div>
@@ -180,10 +189,10 @@
     <span class="section-line"></span>
 
     <div class="gallery">
-      <img src="/emaar/images/gallery1.webp" alt="Landscape Greens" loading="lazy">
-      <img src="/emaar/images/gallery2.webp" alt="Waterfront Promenade"loading="lazy">
-      <img src="/emaar/images/gallery3.webp" alt="Club Serenity" loading="lazy">
-      <img src="/emaar/images/gallery4.webp" alt="Open Courtyards" loading="lazy">
+      <img src="../emaar/images/gallery1.webp" alt="Landscape Greens" loading="lazy">
+      <img src="../emaar/images/gallery2.webp" alt="Waterfront Promenade"loading="lazy">
+      <img src="../emaar/images/gallery3.webp" alt="Club Serenity" loading="lazy">
+      <img src="../emaar/images/gallery4.webp" alt="Open Courtyards" loading="lazy">
     </div>
   </div>
 </section>
@@ -193,7 +202,7 @@
   <div class="apex-amenities-wrap">
 
     <div class="amenities-image">
-      <img src="/emaar/images/amenities.webp" alt="Serenity Hills Clubhouse" loading="lazy">
+      <img src="../emaar/images/amenities.webp" alt="Serenity Hills Clubhouse" loading="lazy">
     </div>
 
     <div class="amenities-content">
@@ -219,7 +228,7 @@
     </button>
 
     <div class="apex-popup-header">
-      <img src="/img/image.png" alt="Apex Landbase Logo">
+      <img src="../img/image.png" alt="Apex Landbase Logo">
       <h3>Get Exclusive Details</h3>
       <p>Register now to receive price, floor plan & offers</p>
     </div>
@@ -282,7 +291,7 @@
     </p>
     <p>
       Explore more luxury residential projects by
-      <a href="index.html">Apex Landbase</a>
+      <a href="../index.html">Apex Landbase</a>
     </p>
 </footer>
   <!-- ================= ELAN : BROCHURE MODAL ================= -->
@@ -330,7 +339,7 @@
     );
   </script>
 
-<script src="/js/elan.js" defer></script>
+<script src="../js/elan.js" defer></script>
 
 </body>
 </html>
